# ShipShell

./: .clinerules  .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.md
docs/: builtins.md  ide_support.md
python/: __init__.py  core.py  init.py  ship_shell_marker.py  shp.py  shp_builtins.py
python/shell/: core.py  example_init.py  init.py  shell_marker.py
python/shell/shp/: WHOAMI.txt  __init__.py  builtins.py  repl.py
python/ship_ergo/: __init__.py  builtins.py  shell.py
python/shp/: __init__.py  core.py
python/shp/ergo/: __init__.py  builtins.py  posix.py
src/: bindings.rs  main.rs  repl.rs  shell_env.rs
src/py_bindings/: mod.rs  repl.rs  shell.rs
src/shell/: builtins.rs  env.rs  exec.rs  mod.rs
src/shell/exec/: capture.rs  mod.rs  pipeline.rs  resolution.rs  types.rs
tools/: generate_posix_wrappers.py
