[package]
name = "ship_shell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
home = "0.5.12"
nix = { version = "0.30.1", features = ["fs", "process"] }
pyo3 = { version = "0.27.1", features = ["anyhow", "auto-initialize"] }
reedline = "0.43.0"
signal-hook = "0.3.18"
